# mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
src/serply_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  context.py  errors.py  logging.py  models.py  server.py  tools.py
tests/: conftest.py  test_auth.py  test_client.py  test_config_and_misc.py  test_logging_models.py  test_main.py  test_server.py  test_tools.py
